# line_segment_mapping

./: .clang-format  CMakeLists.txt  LICENSE  README.md  package.xml
cmake_modules/: FindG2O.cmake  FindSUITESPARSE.cmake
config/: mapper_params.yaml
include/line_segment_mapping/: g2o_solver.h  line_extractor.h  line_segment_extractor.h  line_segment_feature.h  line_segment_map.h  line_segment_map_manager.h  line_segment_mapper.h  util.h
launch/: demo.launch  demo.rviz  line_segment_mapping.launch
src/: g2o_solver.cpp  line_extractor.cpp  line_segment_extractor.cpp  line_segment_map.cpp  line_segment_map_manager.cpp  line_segment_mapper.cpp  slam_karto_g2o.cpp
